include ../build-aux/guile.am

moddir=$(prefix)/share/guile/site/$(GUILE_EFFECTIVE_VERSION)
godir=$(libdir)/guile/$(GUILE_EFFECTIVE_VERSION)/ccache

SOURCES =					\
  bicho/cps.scm					\
  bicho/cps/constructors.scm			\
  bicho/cps/contification.scm			\
  bicho/cps/cse.scm				\
  bicho/cps/dce.scm				\
  bicho/cps/effects-analysis.scm		\
  bicho/cps/elide-values.scm			\
  bicho/cps/intmap.scm				\
  bicho/cps/intset.scm				\
  bicho/cps/optimize.scm			\
  bicho/cps/prune-bailouts.scm			\
  bicho/cps/prune-top-level-scopes.scm		\
  bicho/cps/renumber.scm			\
  bicho/cps/self-references.scm			\
  bicho/cps/simplify.scm			\
  bicho/cps/spec.scm				\
  bicho/cps/specialize-primcalls.scm		\
  bicho/cps/split-rec.scm			\
  bicho/cps/type-fold.scm			\
  bicho/cps/types.scm				\
  bicho/cps/utils.scm				\
  bicho/cps/verify.scm				\
  bicho/cps/with-cps.scm			\
  bicho/scheme/expand.scm			\
  bicho/tree-il.scm				\
  bicho/tree-il/analyze.scm			\
  bicho/tree-il/canonicalize.scm		\
  bicho/tree-il/ck.scm				\
  bicho/tree-il/compile-cps2.scm		\
  bicho/tree-il/compile.scm			\
  bicho/tree-il/debug.scm			\
  bicho/tree-il/effects.scm			\
  bicho/tree-il/fix-letrec.scm			\
  bicho/tree-il/lalr.scm			\
  bicho/tree-il/language.scm			\
  bicho/tree-il/message.scm			\
  bicho/tree-il/optimize.scm			\
  bicho/tree-il/peval.scm			\
  bicho/tree-il/pmatch.scm			\
  bicho/tree-il/primitives.scm			\
  bicho/tree-il/syntax.scm			\
  bicho/tree-il/target.scm			\
  bicho/tree-il/types.scm
